fix block tabs active spacing

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -130,6 +130,9 @@ nav.navbar
         cursor: pointer
         color: $cWhite
 
+        p 
+            padding-bottom: 15px
+
 .content
     display: none
 
