--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -152,6 +152,9 @@ nav.navbar::before {
   cursor: pointer;
   color: #FFFFFF;
 }
+.block-tabs .tabs p {
+  padding-bottom: 15px;
+}
 
 .content {
   display: none;
